test_results.txt

=================================== ERRORS ====================================
_________________ ERROR collecting tests/test_risk_engine.py __________________
..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
..\AppData\Local\Programs\Python\Python311\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Users\AD\crypto-risk-system\tests\test_risk_engine.py", line 277
E       """
E       ^
E   SyntaxError: unterminated triple-quoted string literal (detected at line 277)
=========================== short test summary info ===========================
ERROR tests/test_risk_engine.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
1 error in 0.31s
